# wider

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.txt  vcpkg.json
cmake/: arch.cmake
src/: CMakeLists.txt  main.cpp
src/api/cpp/: README.md
src/api/loader/: loader.cpp  loader.hpp
src/api/rust/: README.md
src/config/system/: provider.cpp  provider.hpp
src/config/system/data/: data.hpp  window.hpp
src/core/common/: app.cpp  app.hpp  main.cpp  main.hpp
src/core/gtk/: app-gtk.cpp  app-gtk.hpp  main-gtk.cpp  main-gtk.hpp
src/core/sdl2/: event-loop.cpp  event-loop.hpp  init.cpp  init.hpp  main.cpp  main.hpp
src/ui/imgui/: context.cpp  context.hpp  init.cpp  init.hpp
src/ui/io/: data.hpp  io.cpp  io.hpp
src/ui/io/common/: io.cpp  io.hpp
src/ui/io/sdl/: io.cpp  io.hpp
src/ui/layout/: main-layout.cpp  main-layout.hpp
src/ui/layout/common/: layout.hpp
src/ui/layout/factory/: layout-factory.cpp  layout-factory.hpp
src/ui/layout/main/: client-area-layout.cpp  client-area-layout.hpp  main-layout.cpp  main-layout.hpp  panel-area-layout.cpp  panel-area-layout.hpp  side-bar-layout.cpp  side-bar-layout.hpp  status-bar-layout.cpp  status-bar-layout.hpp  title-bar-layout.cpp  title-bar-layout.hpp
src/ui/render/common/: render-loop.cpp  render-loop.hpp
src/ui/render/gl/: gl-init.cpp  gl-init.hpp  render-loop.cpp  render-loop.hpp
src/ui/widgets/tree/: tree-widget.hpp
src/ui/window/: window.hpp
src/ui/window/common/: window-data.hpp  window.cpp  window.hpp
src/ui/window/gtk/: window-gtk.cpp  window-gtk.hpp
(+16 files in other folders)
